HapDebugger/binBuildLog.txt
  File "C:\bin\scanpackages.py", line 9
    delete hello
               ^
SyntaxError: invalid syntax
tax
